--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -8,6 +8,8 @@ add_plugin(stokes  stokes.cpp)
 add_plugin(moment  moment.cpp)
 add_plugin(volpath  volpath.cpp)
 add_plugin(volpathmis volpathmis.cpp)
+add_plugin(preirradiance    preirradiance.cpp)
+add_plugin(irradiancemap    irradiancemap.cpp)
 
 # Register the test directory
 add_tests(${CMAKE_CURRENT_SOURCE_DIR}/tests)
